[package]
name = "steam"
version = "0.1.5"
edition = "2024"

[lib]
name = "steamtools"

[[bin]]
name = "stcli"
path = "gui/main.rs"

[dependencies]
eframe = { version = "0.33.0", features = ["wgpu", "persistence"] }
egui_code_editor = "0.2.20"
egui_extras = { version = "0.33.2", features = ["all_loaders"] }
image = { version = "0.25.8", features = ["jpeg"] }
reqwest = { version = "0.12.24", features = ["json","blocking"] }
rfd = "0.15.4"
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tree-sitter = "0.25.10"
tree-sitter-lua = "0.2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
cc = "1.2.46"
