[package]
authors = ["Gabriel"]
license = "MIT"
name = "steam"
version = "0.3.1"
edition = "2024"

[lib]
name = "steamtools"

[[bin]]
name = "stcli"
path = "gui/main.rs"

[profile.release]
opt-level = 3
incremental = true
debug = "line-tables-only"

[profile.profiling]
inherits = "release"
debug = true
opt-level = 3

[dependencies]
eframe = { version = "0.33.3", features = ["wgpu", "persistence"] }
egui_code_editor = "0.2.20"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = { version = "0.25.9", features = ["jpeg"] }
reqwest = { version = "0.13.2", features = ["json","blocking"] }
rfd = "0.17.0"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tree-sitter = "0.26.5"
tree-sitter-lua = "0.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
windows-registry = "0.6.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
cc = "1.2.56"

[dev-dependencies]
criterion = "0.8.2"
